--- a/css/index.css
+++ b/css/index.css
@@ -11,8 +11,9 @@ div.container {
     padding-left: 20px;
     padding-right: 20px;
     padding-bottom: 3rem;
+    padding-top: 1.5rem;
     margin: auto;
-    min-width: 800px;
+    min-width: 900px;
     max-width: 1100px;
 }
 
@@ -59,9 +60,37 @@ td.past-session {
 }
 
 h1 {
-    text-align: center;
     color: #CED4DA;
     font-family: Besley;
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-bottom: 3rem;
+    float: left;
+    margin-block-start: 0;
+}
+
+div#timer {
+    float: right;
+    background-color: #1C1F22;
+    border-radius: 15px;
+    width: 100px;
+    text-align: right;
+    padding: 1rem;
+    margin-right: 1rem;
+    min-width: fit-content;
+}
+
+div#timer div:first-child {
+    font-size: 0.7rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    margin-bottom: 0.5rem;
+}
+
+div#timer div:last-child {
+    /* text-align: right; */
+    font-size: 1.5rem;
+}
+
+.text-right {
+    text-align: right;
 }
