--- a/css/index.css
+++ b/css/index.css
@@ -63,13 +63,11 @@ h1 {
     color: #CED4DA;
     font-family: Besley;
     font-size: 2rem;
-    margin-bottom: 3rem;
-    float: left;
     margin-block-start: 0;
+    margin-block-end: 0;
 }
 
 div#timer {
-    float: right;
     background-color: #1C1F22;
     border-radius: 15px;
     width: 100px;
@@ -93,4 +91,11 @@ div#timer div:last-child {
 
 .text-right {
     text-align: right;
+}
+
+div#header {
+    margin-bottom: 3rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
